syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/api/nlu";
option java_package = "ru.yandex.alice.protos.api.nlu";

message TFeatureContainer {
    repeated float Features = 1;
}
